<resources>
    <string name="app_name" translatable="false">Macros Calculator</string>
    <string name="description">this calculator based on research on multiple users with apple watches , this is the most accurate i can get calories your body burn per day and gives calories and macros you have to eat lose weight in right way.
    \n\n my formula base on following website:\n <url>http://www.acaloriecounter.com/diet/how-many-calories-should-i-eat-per-day-to-lose-weight/</url></string>
    <string name="warning">the result not accurate but this is the range of your macros and calories</string>
    <string name="WelcomeKey">never show this page again</string>
    <string name="Female">Female</string>
    <string name="male">Male</string>
    <string name="age">Age</string>
    <string name="year">Year</string>
    <string name="weight">Weight</string>
    <string name="Kg">Kg</string>
    <string name="Height">Height</string>
    <string name="cm">cm</string>
    <string name="Bodyfat">Body fat</string>
    <string name="Getresults">Get results</string>
    <string name="step">step</string>
    <string name="case1">All day sitting. no exercise</string>
    <string name="case2">light exercise or sports 1–3 days per week</string>
    <string name="case3">Intensive exercise 3–5 days per week </string>
    <string name="case4">hard exercise 6–7 days per week </string>
    <string name="case5">very hard exercise or sports and a physical job or 2x training </string>
    <string name="Activitylevel">Activity Level</string>
    <string name="tipActivityLevel">move the bar to choise avtivity level thats fit you</string>
    <string name="YourBodyBurn">your Body Burn</string>
    <string name="YouShoudEat">You Should Eat</string>
    <string name="Macrosdetils">and your Calories divides to Macros below</string>
    <string name="StartOver">Back to menu</string>
    <string name="caldAY">Calories/day</string>
    <string name="Carb">carbohydrates</string>
    <string name="fat">Fat</string>
    <string name="protien">Protein</string>
    <string name="next">next</string>
    <string name="errorGender">should choice gender</string>
    <string name="errorEmpty">Cannot be empty</string>
    <string name="title_activity_fatinput" translatable="false">fatinput</string>
    <string name="fatdes">Estimed your fat perecntger from the picture</string>
    <string name="NonFat">i Dont know my fat percentage</string>
    <string name="action_settings">settings</string>
    <string name="title_activity_history" translatable="false">HistoryActivity</string>
    <string name="title_activity_info" translatable="false">InfoActivity</string>
    <string name="later">later</string>


</resources>
