<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_fat"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/input_layout_weight"
        app:layout_constraintRight_toRightOf="@+id/input_layout_weight"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_weight"
        android:layout_below="@+id/imageView6"
        android:layout_alignStart="@+id/imageView6"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp">

        <EditText
            android:id="@+id/input_fatper"
            android:layout_width="143dp"
            android:layout_height="match_parent"
            android:hint="@string/Bodyfat"
            android:inputType="numberDecimal" />

    </android.support.design.widget.TextInputLayout>

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:srcCompat="@drawable/bodyfatmen"
        android:layout_marginTop="14dp"
        android:layout_below="@+id/textViewFatdes"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textViewFatdes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="29dp"
        android:text="@string/fatdes"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/buttonFatDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_alignTop="@+id/input_layout_fat"
        android:layout_alignEnd="@+id/imageView6"
        android:layout_marginEnd="12dp" />
</RelativeLayout>
</ScrollView>